Fixed overflow issue

--- a/extension/pages/settings/style.css
+++ b/extension/pages/settings/style.css
@@ -8,6 +8,7 @@ body{
   display:flex;
   color:#252525;
   font-family:Montserrat;
+  overflow:hidden;
 }
 
 .sidebar{
@@ -43,6 +44,7 @@ body{
   height:100vh;
   background:#f5f5f5;
   flex-grow:1;
+  overflow:auto;
 }
 
 .message{
@@ -93,6 +95,10 @@ body{
   margin:20px auto 0;
   border:1px solid #eee;
   border-radius:8px;
+}
+
+.section:last-child{
+  margin-bottom:20px;
 }
 
 .section > *{
